# School-portal

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  chotot_db.sqlite3_hashed  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  sample.pyproject.toml  start_server.sh  todo.txt  tox.ini
about/: models.py
about/migrations/: 0001_initial.py
academics/: models.py
academics/migrations/: 0001_initial.py
app/: adapters.py  admin.py  blocks.py  custom_adapter.py  forms.py  models.py  services  social_account_adapter.py  utils.py  views.py
app/blocks/: base_stream_block.py  header_block.py  image_block.py  item_block.py
app/migrations/: 0001_initial.py  0002_alter_infopage_images.py  0002_imagesgallarypage_infopage_listpage_newsitemspage_and_more.py  0002_infopage_type.py  0002_remove_infopage_images.py  0002_remove_schoolclasspage_gallery_images_and_more.py  0003_alter_schoolclasspage_gallery_images.py  0003_homepage_keywords_homepage_search_image.py  0003_homepage_listpage_profilepage.py  0003_newsitemspage.py  0004_alter_profile_age.py  0004_classpage.py  0004_remove_homepage_gallery_images_and_more.py  0005_alter_homepage_body_alter_infopage_body_and_more.py  0005_profile_body_profile_image_delete_profilepage.py  0005_rename_classpage_schoolclasspage_and_more.py  0006_alter_imagesgallarypage_school_class.py  (+20 more)
config/: urls.py  wsgi.py
core/: models.py
faculties/: models.py
home/: models.py
international/: models.py
newsroom/: models.py
people/: models.py
research/: models.py
school_portal/: urls.py  wsgi.py
support/: models.py
templates/: base.html
tests/: test_page_exists.py
(+156 files in other folders)
