[tool.poetry]
name = "school-portal"
version = "0.1.0"
description = ""
authors = ["Aleksandr <amvorobei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
wagtail = "^3.0.1"
Django = "^4.0.6"
django-debug-toolbar = "^3.5.0"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
dj-database-url = "^0.5.0"
wagtailfontawesome = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
