[tool.poetry]
name = "school-portal"
version = "0.1.0"
description = ""
authors = ["EvgeniiShcherbina <eugene@inkit.com>"]
readme = "README.md"
packages = [{include = "school_portal"}]

[tool.poetry.dependencies]
python = "3.9.5"
django-allauth = "^0.51.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
wagtail = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
